--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -41,6 +41,7 @@ jobs:
     - name: Add custom CNAME
       run: echo cv.platonoff.dev > ./build/CNAME
     - name: Deploy
-      uses: peaceiris/actions-gh-pages@v3
+      uses: peaceiris/actions-gh-pages@v4
       with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./build
